floating cta images

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -2697,6 +2697,34 @@ video {
   top: 100%;
 }
 
+#app .right-s8{
+  right: 40px;
+}
+
+#app .right-0{
+  right: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .-left-\[25\%\]{
+  left: -25%;
+}
+
+#app .right-0{
+  right: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .-left-\[25\%\]{
+  left: -25%;
+}
+
 #app .isolate{
   isolation: isolate;
 }
@@ -2786,6 +2814,14 @@ video {
   margin-top: 28px;
 }
 
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
 #app .block{
   display: block;
 }
@@ -2816,6 +2852,10 @@ video {
 
 #app .aspect-\[4\/5\]{
   aspect-ratio: 4/5;
+}
+
+#app .aspect-square{
+  aspect-ratio: 1 / 1;
 }
 
 #app .h-auto{
@@ -2868,6 +2908,14 @@ video {
 
 #app .h-\[310px\]{
   height: 310px;
+}
+
+#app .h-auto{
+  height: auto;
+}
+
+#app .h-full{
+  height: 100%;
 }
 
 #app .max-h-\[800px\]{
@@ -2924,6 +2972,90 @@ video {
   width: 104px;
 }
 
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-\[366px\]{
+  width: 366px;
+}
+
+#app .w-\[223px\]{
+  width: 223px;
+}
+
+#app .w-\[2px\]{
+  width: 2px;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-\[366px\]{
+  width: 366px;
+}
+
+#app .w-\[230px\]{
+  width: 230px;
+}
+
+#app .w-\[2px\]{
+  width: 2px;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-\[250px\]{
+  width: 250px;
+}
+
+#app .w-s8{
+  width: 40px;
+}
+
+#app .w-\[40\%\]{
+  width: 40%;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-\[250px\]{
+  width: 250px;
+}
+
+#app .w-s8{
+  width: 40px;
+}
+
+#app .w-\[45\%\]{
+  width: 45%;
+}
+
+#app .w-1\/2{
+  width: 50%;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-\[45\%\]{
+  width: 45%;
+}
+
+#app .w-s8{
+  width: 40px;
+}
+
+#app .w-1\/2{
+  width: 50%;
+}
+
 #app .max-w-content{
   max-width: 1120px;
 }
@@ -2970,6 +3102,30 @@ video {
 
 #app .max-w-\[540px\]{
   max-width: 540px;
+}
+
+#app .max-w-content{
+  max-width: 1120px;
+}
+
+#app .max-w-\[510px\]{
+  max-width: 510px;
+}
+
+#app .max-w-content{
+  max-width: 1120px;
+}
+
+#app .max-w-\[510px\]{
+  max-width: 510px;
+}
+
+#app .max-w-content{
+  max-width: 1120px;
+}
+
+#app .max-w-\[510px\]{
+  max-width: 510px;
 }
 
 #app .flex-1{
@@ -3048,6 +3204,10 @@ video {
   gap: 24px;
 }
 
+#app .gap-s9{
+  gap: 48px;
+}
+
 #app .justify-self-end{
   justify-self: end;
 }
@@ -3104,6 +3264,26 @@ video {
   background-color: rgb(102 102 102 / var(--tw-bg-opacity));
 }
 
+#app .bg-secondary-500{
+  background-color: var(--secondary-500);
+}
+
+#app .bg-primary-800{
+  background-color: var(--primary-800);
+}
+
+#app .bg-secondary-500{
+  background-color: var(--secondary-500);
+}
+
+#app .bg-primary-800{
+  background-color: var(--primary-800);
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
 #app .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -3124,6 +3304,30 @@ video {
 
 #app .p-s2{
   padding: 8px;
+}
+
+#app .p-s11{
+  padding: 80px;
+}
+
+#app .p-s13{
+  padding: 120px;
+}
+
+#app .p-s11{
+  padding: 80px;
+}
+
+#app .p-s13{
+  padding: 120px;
+}
+
+#app .p-s11{
+  padding: 80px;
+}
+
+#app .p-s13{
+  padding: 120px;
 }
 
 #app .py-s4{
@@ -3241,6 +3445,46 @@ video {
   padding-right: 36px;
 }
 
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .px-s13{
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .px-s13{
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+#app .py-s8{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+#app .py-s11{
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#app .py-s8{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+#app .py-s11{
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
 #app .pb-s14{
   padding-bottom: 160px;
 }
@@ -3255,6 +3499,18 @@ video {
 
 #app .pb-s10{
   padding-bottom: 64px;
+}
+
+#app .pb-s14{
+  padding-bottom: 160px;
+}
+
+#app .pr-s8{
+  padding-right: 40px;
+}
+
+#app .pb-s14{
+  padding-bottom: 160px;
 }
 
 #app .text-center{
@@ -3311,6 +3567,28 @@ video {
 #app .text-black-900{
   --tw-text-opacity: 1;
   color: rgb(26 26 26 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
+}
+
+#app .text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
+}
+
+#app .text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
 }
 
 #app .underline{
