--- a/sections/sale-cta.liquid
+++ b/sections/sale-cta.liquid
@@ -1,5 +1,7 @@
-<div class="w-full max-w-[820px] mx-auto flex gap-s9">
-    <h2 class="faux-h4 w-[223px] text-secondary-100"> {{ section.settings.heading }} </h2>
+<div class="w-full max-w-content mx-auto flex gap-s9">
+    <div class="w-[366px] flex justify-end">
+        <h2 class="faux-h4 w-[230px] text-right text-secondary-100"> {{ section.settings.heading }} </h2>
+    </div>
     <div class="w-[2px] h-auto bg-secondary-500"></div>
     <div class="flex-1">
         <p class="text-white">{{ section.settings.text }}</p>
