make main floating cta image cover

--- a/sections/floating_cta.liquid
+++ b/sections/floating_cta.liquid
@@ -9,7 +9,7 @@
     <div class="absolute right-0 top-0 w-[45%] h-full flex items-center">
         <img src="{{ section.settings.backgroundTexture | image_url }}" class="absolute right-0 py-s8 w-s8 h-full object-cover" />
         <img src="{{ section.settings.productImage | image_url }}" class="w-1/2 aspect-square absolute -left-[25%] object-cover"/>
-        <img src="{{ section.settings.mainImage | image_url }}" class="w-full h-full pr-s8"/>
+        <img src="{{ section.settings.mainImage | image_url }}" class="w-full h-full pr-s8 object-cover"/>
     </div>
 </div>
 
