footer, banner, and cta image selector

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -164,14 +164,14 @@
   border-width: 1px;
   border-style: solid;
   --tw-border-opacity: 1;
-  border-color: rgb(153 153 153 / var(--tw-border-opacity));
+  border-color: rgb(157 157 157 / var(--tw-border-opacity));
 }
 
 .product-variant--page.active .disc,  .product-variant--tile.active .disc{
   border-width: 1px;
   border-style: solid;
   --tw-border-opacity: 1;
-  border-color: rgb(26 26 26 / var(--tw-border-opacity));
+  border-color: rgb(34 34 34 / var(--tw-border-opacity));
 }
 
 html {
@@ -217,7 +217,7 @@ nav{
 .dropdown__link--level-2{
   text-transform: capitalize;
   --tw-text-opacity: 1;
-  color: rgb(102 102 102 / var(--tw-text-opacity));
+  color: rgb(108 108 108 / var(--tw-text-opacity));
 }
 
 /* search animation */
@@ -248,7 +248,7 @@ nav .search input{
   flex-grow: 1;
   border-bottom-width: 2px;
   --tw-border-opacity: 1;
-  border-color: rgb(128 128 128 / var(--tw-border-opacity));
+  border-color: rgb(132 132 132 / var(--tw-border-opacity));
 }
 
 nav.search-mode .search input{
@@ -2794,6 +2794,58 @@ video {
   margin-top: 28px;
 }
 
+#app .mr-s4{
+  margin-right: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .ml-s4{
+  margin-left: 16px;
+}
+
+#app .mr-s4{
+  margin-right: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .ml-s4{
+  margin-left: 16px;
+}
+
+#app .mr-s4{
+  margin-right: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .ml-s4{
+  margin-left: 16px;
+}
+
+#app .mr-s4{
+  margin-right: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .ml-s4{
+  margin-left: 16px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
 #app .block{
   display: block;
 }
@@ -2866,6 +2918,14 @@ video {
   height: 48px;
 }
 
+#app .\!h-auto{
+  height: auto !important;
+}
+
+#app .h-s5{
+  height: 20px;
+}
+
 #app .h-\[800px\]{
   height: 800px;
 }
@@ -2878,8 +2938,12 @@ video {
   height: 620px;
 }
 
-#app .h-\[310px\]{
-  height: 310px;
+#app .h-s3{
+  height: 12px;
+}
+
+#app .h-auto{
+  height: auto;
 }
 
 #app .max-h-\[800px\]{
@@ -2924,6 +2988,10 @@ video {
   width: 40px;
 }
 
+#app .w-s6{
+  width: 24px;
+}
+
 #app .w-\[45\%\]{
   width: 45%;
 }
@@ -2948,8 +3016,28 @@ video {
   width: 2px;
 }
 
-#app .w-\[104px\]{
-  width: 104px;
+#app .w-s3{
+  width: 12px;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-\[366px\]{
+  width: 366px;
+}
+
+#app .w-\[360px\]{
+  width: 360px;
+}
+
+#app .w-\[230px\]{
+  width: 230px;
+}
+
+#app .w-\[2px\]{
+  width: 2px;
 }
 
 #app .max-w-content{
@@ -2966,10 +3054,6 @@ video {
 
 #app .max-w-\[740px\]{
   max-width: 740px;
-}
-
-#app .max-w-\[790px\]{
-  max-width: 790px;
 }
 
 #app .max-w-\[548px\]{
@@ -2996,8 +3080,12 @@ video {
   max-width: 1020px;
 }
 
-#app .max-w-\[540px\]{
-  max-width: 540px;
+#app .max-w-\[600px\]{
+  max-width: 600px;
+}
+
+#app .max-w-content{
+  max-width: 1120px;
 }
 
 #app .flex-1{
@@ -3014,6 +3102,11 @@ video {
 
 #app .border-collapse{
   border-collapse: collapse;
+}
+
+#app .rotate-180{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 #app .transform{
@@ -3072,8 +3165,24 @@ video {
   gap: 4px;
 }
 
+#app .gap-s4{
+  gap: 16px;
+}
+
 #app .gap-\[24px\]{
   gap: 24px;
+}
+
+#app .gap-s3{
+  gap: 12px;
+}
+
+#app .gap-s6{
+  gap: 24px;
+}
+
+#app .gap-s9{
+  gap: 48px;
 }
 
 #app .justify-self-end{
@@ -3088,6 +3197,20 @@ video {
 
 #app .border{
   border-width: 1px;
+}
+
+#app .border-t-2{
+  border-top-width: 2px;
+}
+
+#app .border-black-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(108 108 108 / var(--tw-border-opacity));
+}
+
+#app .border-black-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(181 181 181 / var(--tw-border-opacity));
 }
 
 #app .bg-primary-800{
@@ -3129,7 +3252,19 @@ video {
 
 #app .bg-black-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(102 102 102 / var(--tw-bg-opacity));
+  background-color: rgb(108 108 108 / var(--tw-bg-opacity));
+}
+
+#app .bg-primary-800{
+  background-color: var(--primary-800);
+}
+
+#app .bg-secondary-500{
+  background-color: var(--secondary-500);
+}
+
+#app .bg-primary-800{
+  background-color: var(--primary-800);
 }
 
 #app .object-contain{
@@ -3269,6 +3404,56 @@ video {
   padding-right: 36px;
 }
 
+#app .py-s4{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\]{
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s4{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\]{
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s4{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\]{
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s4{
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+#app .px-\[36px\]{
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .px-s13{
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
 #app .pb-s14{
   padding-bottom: 160px;
 }
@@ -3332,17 +3517,55 @@ video {
 
 #app .text-black-600{
   --tw-text-opacity: 1;
-  color: rgb(102 102 102 / var(--tw-text-opacity));
+  color: rgb(108 108 108 / var(--tw-text-opacity));
 }
 
 #app .text-black-400{
   --tw-text-opacity: 1;
-  color: rgb(153 153 153 / var(--tw-text-opacity));
+  color: rgb(157 157 157 / var(--tw-text-opacity));
 }
 
 #app .text-black-900{
   --tw-text-opacity: 1;
-  color: rgb(26 26 26 / var(--tw-text-opacity));
+  color: rgb(34 34 34 / var(--tw-text-opacity));
+}
+
+#app .text-black-500{
+  --tw-text-opacity: 1;
+  color: rgb(132 132 132 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
+}
+
+#app .text-secondary-600{
+  color: var(--secondary-600);
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
+}
+
+#app .text-secondary-600{
+  color: var(--secondary-600);
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
+}
+
+#app .text-secondary-600{
+  color: var(--secondary-600);
+}
+
+#app .text-secondary-100{
+  color: var(--secondary-100);
+}
+
+#app .text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 #app .underline{
